k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: whiteapp
  name: wa-backend
  labels:
    app: wa-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wa-backend
  template:
    metadata:
      labels:
        app: wa-backend
    spec:
      containers:
        - name: wa-backend
          image: lizzieb1416/wa_backend:latest
          ports:
            - containerPort: 5000
