k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: wa-backend-svc
  namespace: whiteapp
  labels:
    app: wa-backend
spec:
  selector:
    app: wa-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
