k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wa-backend-ingress
  namespace: whiteapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: whiteapp-api.info
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wa-backend-svc
                port:
                  number: 80
